# ipAddCal

./: .gitignore  LICENSE  Package.swift  README.en.md  README.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  vite.config.ts
Resources/: AppIcon.icns
Sources/IPCalculatorCore/: AddressCount.swift  BaseConversion.swift  CoreTypes.swift  IPAddress.swift  IPCalculatorError.swift  InputNormalizer.swift  NetworkCalculator.swift
Sources/IPCalculatorFeatures/: AppNavigationModel.swift  BaseConversionState.swift  BaseConversionViewModel.swift  CalculatorModels.swift  CalculatorViewModel.swift  CalculatorWorkbenchViewModel.swift  HistoryStore.swift  NetworkWorkspaceViewModel.swift  TranslationWorkspaceViewModel.swift
Sources/IPNetworkCalculator/: BaseConversionView.swift  BinaryBitGridView.swift  ContentView.swift  CyberpunkStyle.swift  GlassStyle.swift  HistoryPopoverView.swift  HistorySidebarView.swift  IPNetworkCalculatorApp.swift  IPWorkspacePickerView.swift  IPWorkspaceView.swift  InputPanelView.swift  ModePickerView.swift  NetworkWorkspaceView.swift  NormalizingTextField.swift  ResultPanelView.swift  SidebarNavigationView.swift  ThemeStyle.swift  TranslationDirectionPickerView.swift  TranslationWorkspaceView.swift
Tests/IPCalculatorCoreTests/: AddressCountTests.swift  BaseConversionTests.swift  IPMappingTests.swift  IPv4NetworkTests.swift  (+3 more)
scripts/: package-app.sh
src/: app.test.ts  ipcalc.test.ts  ipcalc.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
(+22 files in other folders)
