[package]
name = "ip-network-calculator"
version = "0.1.0"
description = "IP 地址计算器"
authors = ["ipAddCal"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "ip_network_calculator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[profile.release]
panic = "abort"
lto = "thin"
codegen-units = 1
strip = "symbols"
